--- a/527.tex
+++ b/527.tex
@@ -344,6 +344,7 @@ Now with the help of our derivation rule, we can prove our soundness theorem. We
 
 \vspace{3em}
 \text{Case:}
+TODO
 \[
 \infer[\lor kE^{u,v}]{C}{
     {A \lor^k B}
@@ -380,6 +381,18 @@ Now with the help of our derivation rule, we can prove our soundness theorem. We
 }
 \]
 
+\vspace{3em}
+\text{Case:}
+\[
+\infer[\neg\neg E]{A}{
+    \neg\neg A
+}
+\quad \Rightarrow \quad
+\infer[\neg\neg\neg R]{\neg \neg A}{
+    \neg\neg\neg\neg A
+}
+\]
+
 
 
 
@@ -400,26 +413,152 @@ Now with the help of our derivation rule, we can prove our soundness theorem. We
 
 \section{Completeness}
 
-\begin{center}
-\begin{tabular}{ccc}
-Case: & & Case: \\
-$\infer[\lor I_1]{A \lor B}{A}$ & & $\infer[\lor I_2]{A \lor B}{B}$ \\
-$A = \neg\neg A'$ & & $A = \neg\neg A'$ \\
-$B = \neg\neg B'$ & & $B = \neg\neg B'$ \\
-$\infer{\neg\neg A'}{\infer{A'}{}}$ & $\neg\neg Z$ & $\infer{\neg\neg B'}{\infer{B'}{}}$ \\
-$\infer[\lor I_1]{A' \lor B'}{A'}$ & & $\infer[\lor I_2]{A' \lor B'}{B'}$ \\
-\end{tabular}
-\end{center}
 
-\begin{center}
-\begin{tabular}{ccc}
-Case: & & \\
-$\infer{A \lor B}{A}$ & $v_B$ & $\infer{C}{}$ \\
-$A = \neg\neg A'$ & & \\
-$B = \neg\neg B'$ & & \\
-$C = \neg\neg C'$ & & $\infer{\neg\neg A' \lor B'}{}$ \\
-& & $\infer{\neg\neg C'}{\neg\neg C' \lor_{k} Z}$ \\
-\end{tabular}
-\end{center}
+\text{Case:}
+\vspace{3em}
+\[
+\infer[\land I]{A \land B}{A & B}
+\quad \Rightarrow \quad
+\infer[\land kI]{A' \land^k B'}{
+    \infer[\neg\neg E]{A'}{\neg\neg A'}
+    \hspace{1em}
+    \infer[\neg\neg E]{B'}{\neg\neg B'}
+}
+\]
+
+\vspace{3em}
+\text{Case:}
+\[
+\infer[\land E1]{A}{
+  A \land B
+}
+\quad \Rightarrow \quad
+\infer[\neg\neg E]{A'}{
+    \infer[\land kE1]{\neg\neg A'}{
+        \neg\neg A' \land^k \neg\neg B'
+    }
+}
+\]
+
+\vspace{3em}
+\text{Case:}
+\[
+\infer[\land E2]{A}{
+  A \land B
+}
+\quad \Rightarrow \quad
+\infer[\neg\neg E]{B'}{
+    \infer[\land kE2]{\neg\neg B'}{
+        \neg\neg A' \land^k \neg\neg B'
+    }
+}
+\]
+
+\vspace{3em}
+\text{Case:}
+\[
+\infer[\supset  I^u]{A \supset B}{
+  \infer*[]{B}{
+    \infer[u]{A}{}
+  }
+}
+\quad \Rightarrow \quad
+\infer[\supset kI^v]{A' \supset^k B'}{
+\infer[\neg \neg E ] {B'}{
+\infer[\supset kE]{\neg \neg B'}{
+  \infer*[]{\infer[\supset kI^u]{\neg \neg A' \supset^k \neg \neg B'}{\neg \neg B'}}{
+    \infer[u]{\neg \neg A'}{}
+  }
+  \infer[\neg\neg X]{\neg\neg A'}{\infer[v]{A'}{}}
+}
+}}
+\]
+
+
+\vspace{3em}
+\text{Case:}
+\[
+\infer[\supset E]{B}{
+    A \supset B & A
+}
+\quad \Rightarrow \quad
+\infer[\neg\neg E]{B'}{
+    \infer[\supset kE]{\neg\neg B'}{
+        \neg\neg A' \supset^k \neg\neg B'
+        &
+        \neg\neg A'
+    } 
+} 
+\]
+
+
+\vspace{3em}
+\text{Case:}
+\[
+\infer[\lor I1]{A \lor B}{A}
+\quad \Rightarrow \quad
+\infer[\lor kI1]{A' \lor^k B'}{
+    \infer[\neg \neg E]{A'}{\neg \neg A'
+    }
+}
+\]
+
+\vspace{3em}
+\text{Case:}
+\[
+\infer[\lor I2]{A \lor B}{B}
+\quad \Rightarrow \quad
+\infer[\lor kI2]{A' \lor^k B'}{
+    \infer[\neg \neg E]{B'}{\neg \neg B'
+    }
+}
+\]
+
+
+\vspace{3em}
+\text{Case:}
+TODO
+\[
+\infer[\lor kE^{u,v}]{C}{
+    {A \lor^k B}
+    \hspace{1em}
+    \infer*[]{C}{
+        \infer[u]{A}{}
+    }
+    \hspace{1em}
+    \infer*[]{C}{
+        \infer[v]{B}{}
+    }
+}
+\quad \Rightarrow \quad
+\infer[\lor E^{u,v}]{C}{
+    {\neg\neg A \lor \neg\neg B}
+    \hspace{1em}
+    \infer*[]{\neg\neg C}{\infer[u]{\neg\neg A}{}}
+    \hspace{1em}
+    \infer*[]{\neg\neg C}{\infer[v]{\neg\neg B}{}}
+}
+\]
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 \end{document}
