--- a/527.tex
+++ b/527.tex
@@ -576,7 +576,7 @@ Now with the help of our derivation rule, and lemma we can prove our soundness t
 
 
 \section{Completeness}
-lemma 1: nd A -> knd A
+lemma 3: if we can proof nd A then we can also proof knd A
 \begin{proof}[Proof]
   \leavevmode\par
   \textbf{Induction hypothesis (IH).}\;
